--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ elseif( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
                 OUTPUT_VARIABLE GCC_VERSION)
     if (GCC_VERSION VERSION_EQUAL 4.6 )
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic -std=c++0x")
-    elseif (GCC_VERSION VERSION_GREATER 4.6 )
+    else()
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic -std=c++11")
     endif()
 endif()
