--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ before_install:
 install:
   - sudo apt-get install cmake
   - sudo apt-get install -qq libsdl2-dev gcc-4.8
-  - export CXX="g++-4.8" CC="gcc-4.8"
+  - sudo apt-get install g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
 env:
   - TRAVIS_NO_EXPORT=YES
   - TRAVIS_NO_EXPORT=NO
